--- a/portfolio.html
+++ b/portfolio.html
@@ -47,12 +47,19 @@
     <main>
       <!--section1-->
       <h1 hidden class="buttons">filters</h1>
-      <a href="" class="button-link link btn" type="button">All</a>
-      <a href="" class="button-link link btn" type="button">Web Site</a>
-      <a href="" class="button-link link btn" type="button">App</a>
-      <a href="" class="button-link link btn" type="button">Design</a>
-      <a href="" class="button-link link btn" type="button">Marketing</a>
-      <!--section2-->
+      <ul class="section-button">
+        <li><button class="button-link link btn" type="button">All</button></li>
+        <li>
+          <button class="button-link link btn" type="button">Web Site</button>
+        </li>
+        <li><button class="button-link link btn" type="button">App</button></li>
+        <li>
+          <button class="button-link link btn" type="button">Design</button>
+        </li>
+        <li>
+          <button class="button-link link btn" type="button">Marketing</button>
+        </li>
+      </ul>
       <ul class="projectcard list">
         <li class="projectcard-item">
           <img
@@ -162,7 +169,7 @@
         </li>
       </ul>
     </main>
-    <!--section3-->
+    <!--section2-->
     <footer class="footer">
       <a href="./index.html" class="footer-logo-web link"
         >WEB
