--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
       <nav class="header-nav">
         <a href="./index.html" class="logo-web link"
-          >WEB <span class="logo-studio link">STUDIO</span>
+          >WEB <span class="logo-studio">Studio</span>
         </a>
         <ul class="menu list text">
           <li class="menu-item">
@@ -31,18 +31,20 @@
           </li>
         </ul>
       </nav>
-      <ul class="contacts list">
-        <li class="contacts-item">
-          <a class="contacts-link link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="contacts-item">
-          <a class="contacts-link link" href="tel:+110001111111"
-            >+11 (000) 111-11-11</a
-          >
-        </li>
-      </ul>
+      <address class="address">
+        <ul class="contacts list">
+          <li class="contacts-item">
+            <a class="contacts-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="contacts-item">
+            <a class="contacts-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+        </ul>
+      </address>
     </header>
     <main>
       <!--section1-->
