--- a/portfolio.html
+++ b/portfolio.html
@@ -46,131 +46,137 @@
     </header>
     <main>
       <!--section1-->
-      <h1 hidden class="buttons">filters</h1>
-      <ul class="section-button list">
-        <li class="btn-link-item list">
-          <button class="button-link link btn" type="button">All</button>
-        </li>
-        <li class="btn-link-item list">
-          <button class="button-link link btn" type="button">Web Site</button>
-        </li>
-        <li>
-          <button class="button-link link btn" type="button">App</button>
-        </li>
-        <li class="btn-link-item list">
-          <button class="button-link link btn" type="button">Design</button>
-        </li>
-        <li class="btn-link-item list">
-          <button class="button-link link btn" type="button">Marketing</button>
-        </li>
-      </ul>
-      <h2 hidden>our projects</h2>
-      <ul class="projectcard list">
-        <li class="projectcard-item">
-          <img
-            class="projectcard-img"
-            src="./images/banking_app.jpg"
-            alt="Banking App Interface Concept"
-            width="360"
-            height="300"
-          />
-          <h2 class="projectcard-name link title-text">
-            Banking App Interface Concept
-          </h2>
-          <p class="projectcard-position link text">App</p>
-        </li>
-        <li class="projectcard-item">
-          <img
-            class="projectcard-img"
-            src="./images/cashless.jpg"
-            alt="Cashless Payment"
-            width="360"
-            height="300"
-          />
-          <h2 class="projectcard-name link title-text">Cashless Payment</h2>
-          <p class="projectcard-position link text">Marketing</p>
-        </li>
-        <li class="projectcard-item">
-          <img
-            class="projectcard-img"
-            src="./images/meditaion.jpg"
-            alt="Meditaion App"
-            width="360"
-            height="300"
-          />
-          <h2 class="projectcard-name link title-text">Meditaion App</h2>
-          <p class="projectcard-position link text">App</p>
-        </li>
-        <li class="projectcard-item">
-          <img
-            class="projectcard-img"
-            src="./images/taxi.jpg"
-            alt="Taxi Service"
-            width="360"
-            height="300"
-          />
-          <h2 class="projectcard-name link title-text">Taxi Service</h2>
-          <p class="projectcard-position link text">Marketing</p>
-        </li>
-        <li class="projectcard-item">
-          <img
-            class="projectcard-img"
-            src="./images/screen.jpg"
-            alt="Screen Illustrations"
-            width="360"
-            height="300"
-          />
+      <section class="portfolio-section">
+        <h1 hidden class="buttons">filters</h1>
+        <ul class="section-button list">
+          <li class="btn-link-item list">
+            <button class="button-link link btn" type="button">All</button>
+          </li>
+          <li class="btn-link-item list">
+            <button class="button-link link btn" type="button">Web Site</button>
+          </li>
+          <li>
+            <button class="button-link link btn" type="button">App</button>
+          </li>
+          <li class="btn-link-item list">
+            <button class="button-link link btn" type="button">Design</button>
+          </li>
+          <li class="btn-link-item list">
+            <button class="button-link link btn" type="button">
+              Marketing
+            </button>
+          </li>
+        </ul>
+        <h2 hidden>our projects</h2>
+        <ul class="projectcard list">
+          <li class="projectcard-item">
+            <img
+              class="projectcard-img"
+              src="./images/banking_app.jpg"
+              alt="Banking App Interface Concept"
+              width="360"
+              height="300"
+            />
+            <h2 class="projectcard-name link title-text">
+              Banking App Interface Concept
+            </h2>
+            <p class="projectcard-position link text">App</p>
+          </li>
+          <li class="projectcard-item">
+            <img
+              class="projectcard-img"
+              src="./images/cashless.jpg"
+              alt="Cashless Payment"
+              width="360"
+              height="300"
+            />
+            <h2 class="projectcard-name link title-text">Cashless Payment</h2>
+            <p class="projectcard-position link text">Marketing</p>
+          </li>
+          <li class="projectcard-item">
+            <img
+              class="projectcard-img"
+              src="./images/meditaion.jpg"
+              alt="Meditaion App"
+              width="360"
+              height="300"
+            />
+            <h2 class="projectcard-name link title-text">Meditaion App</h2>
+            <p class="projectcard-position link text">App</p>
+          </li>
+          <li class="projectcard-item">
+            <img
+              class="projectcard-img"
+              src="./images/taxi.jpg"
+              alt="Taxi Service"
+              width="360"
+              height="300"
+            />
+            <h2 class="projectcard-name link title-text">Taxi Service</h2>
+            <p class="projectcard-position link text">Marketing</p>
+          </li>
+          <li class="projectcard-item">
+            <img
+              class="projectcard-img"
+              src="./images/screen.jpg"
+              alt="Screen Illustrations"
+              width="360"
+              height="300"
+            />
 
-          <h2 class="projectcard-name link title-text">Screen Illustrations</h2>
-          <p class="projectcard-position link text">Design</p>
-        </li>
-        <li class="projectcard-item">
-          <img
-            class="projectcard-img"
-            src="./images/online_courses.jpg"
-            alt="Online Courses"
-            width="360"
-            height="300"
-          />
-          <h2 class="projectcard-name link title-text">Online Courses</h2>
-          <p class="projectcard-position link text">Marketing</p>
-        </li>
-        <li class="projectcard-item">
-          <img
-            class="projectcard-img"
-            src="./images/instagram.jpg"
-            alt="Instagram Stories Concept"
-            width="360"
-            height="300"
-          />
-          <h2 class="projectcard-name link title-text">
-            Instagram Stories Concept
-          </h2>
-          <p class="projectcard-position link text">Design</p>
-        </li>
-        <li class="projectcard-item">
-          <img
-            class="projectcard-img"
-            src="./images/organic_food.jpg"
-            alt="Organic Food"
-            width="360"
-            height="300"
-          />
-          <h2 class="projectcard-name link title-text">Organic Food</h2>
-          <p class="projectcard-position link text">Web site</p>
-        </li>
-        <li class="projectcard-item">
-          <img
-            class="projectcard-img"
-            src="./images/fresh_coffee.jpg"
-            alt="Fresh Coffee"
-            width="360"
-            height="300"
-          />
-          <h2 class="projectcard-name link title-text">Fresh Coffee</h2>
-          <p class="projectcard-position link text">Web site</p>
-        </li>
-      </ul>
+            <h2 class="projectcard-name link title-text">
+              Screen Illustrations
+            </h2>
+            <p class="projectcard-position link text">Design</p>
+          </li>
+          <li class="projectcard-item">
+            <img
+              class="projectcard-img"
+              src="./images/online_courses.jpg"
+              alt="Online Courses"
+              width="360"
+              height="300"
+            />
+            <h2 class="projectcard-name link title-text">Online Courses</h2>
+            <p class="projectcard-position link text">Marketing</p>
+          </li>
+          <li class="projectcard-item">
+            <img
+              class="projectcard-img"
+              src="./images/instagram.jpg"
+              alt="Instagram Stories Concept"
+              width="360"
+              height="300"
+            />
+            <h2 class="projectcard-name link title-text">
+              Instagram Stories Concept
+            </h2>
+            <p class="projectcard-position link text">Design</p>
+          </li>
+          <li class="projectcard-item">
+            <img
+              class="projectcard-img"
+              src="./images/organic_food.jpg"
+              alt="Organic Food"
+              width="360"
+              height="300"
+            />
+            <h2 class="projectcard-name link title-text">Organic Food</h2>
+            <p class="projectcard-position link text">Web site</p>
+          </li>
+          <li class="projectcard-item">
+            <img
+              class="projectcard-img"
+              src="./images/fresh_coffee.jpg"
+              alt="Fresh Coffee"
+              width="360"
+              height="300"
+            />
+            <h2 class="projectcard-name link title-text">Fresh Coffee</h2>
+            <p class="projectcard-position link text">Web site</p>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <!--section2-->
