--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
       </section>
       <!--section4-->
       <section>
-        <h2 class="team-title list">Our Team</h2>
-        <ul class="team-list">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list list">
           <li class="team-item list">
             <img
               class="team-img"
