--- a/portfolio.html
+++ b/portfolio.html
@@ -50,19 +50,21 @@
         <h1 hidden class="buttons">filters</h1>
         <ul class="section-button list">
           <li class="btn-link-item list">
-            <a class="button-link link btn" href="">All</a>
+            <button class="button-link link btn" type="button">All</button>
           </li>
           <li class="btn-link-item list">
-            <a class="button-link link btn" href="">Web Site</a>
+            <button class="button-link link btn" type="button">Web Site</button>
           </li>
           <li>
-            <a class="button-link link btn" href="">App</a>
+            <button class="button-link link btn" type="button">App</button>
           </li>
           <li class="btn-link-item list">
-            <a class="button-link link btn" href="">Design</a>
+            <button class="button-link link btn" type="button">Design</button>
           </li>
           <li class="btn-link-item list">
-            <a class="button-link link btn" href=""> Marketing </a>
+            <button class="button-link link btn" type="button">
+              Marketing
+            </button>
           </li>
         </ul>
         <ul class="projectcard list">
