--- a/portfolio.html
+++ b/portfolio.html
@@ -84,15 +84,17 @@
             </a>
           </li>
           <li class="projectcard-item">
-            <img
-              class="projectcard-img"
-              src="./images/cashless.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h2 class="projectcard-name link title-text">Cashless Payment</h2>
-            <p class="projectcard-position link text">Marketing</p>
+            <a class="link" href="">
+              <img
+                class="projectcard-img"
+                src="./images/cashless.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h2 class="projectcard-name link title-text">Cashless Payment</h2>
+              <p class="projectcard-position link text">Marketing</p>
+            </a>
           </li>
           <li class="projectcard-item">
             <a class="link" href="">
