--- a/portfolio.html
+++ b/portfolio.html
@@ -105,7 +105,7 @@
                 width="360"
                 height="300"
               />
-              <h2 class="projectcard-name link title-text">Meditaion App</h2>
+              <h2 class="projectcard-name link title-text">Meditation App</h2>
               <p class="projectcard-position link text">App</p>
             </a>
           </li>
@@ -176,7 +176,7 @@
                 height="300"
               />
               <h2 class="projectcard-name link title-text">Organic Food</h2>
-              <p class="projectcard-position link text">Web site</p>
+              <p class="projectcard-position link text">Web Site</p>
             </a>
           </li>
           <li class="projectcard-item">
@@ -189,7 +189,7 @@
                 height="300"
               />
               <h2 class="projectcard-name link title-text">Fresh Coffee</h2>
-              <p class="projectcard-position link text">Web site</p>
+              <p class="projectcard-position link text">Web Site</p>
             </a>
           </li>
         </ul>
